--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">TFLite_fashion_mnist</string>
     <string-array name="models_array">
         <item>Selecione um modelo</item>
-        <item>model_opt_fashion_mnist.tflite</item>
-        <item>model_notopt_fashion_mnist.tflite</item>
+        <item>model_normal.tflite</item>
+        <item>model_opt_size.tflite</item>
+        <item>model_opt_speed.tflite</item>
+        <item>model_opt_default.tflite</item>
     </string-array>
 </resources>
